# undo-hack

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  init.sql  main_pipeline.ipynb  pyproject.toml
src/: annotations.py  config.py  database.py  main.py
src/ai/: engine.py  svm_model.pkl
src/core/: auth.py
src/crud/: compensations_requests.py  users.py
src/dependencies/: auth.py
src/migrations/: env.py
src/migrations/versions/: 9dbf60a2b9ee_.py
src/models/: __init__.py  choices.py  compensation_requests.py  geo.py  mixins.py  users.py
src/models/fixtures/: load_compensations.py  load_energy_type.py  load_geo.py  load_users.py  loaddata.py  states_and_cities.json
src/routers/: api.py  auth.py  compensation_requests.py  users.py
src/schemas/: auth.py  base.py  compensation_requests.py  geo.py  queries.py  users.py
