[tool.poetry]
name = "compensations-backend"
version = "0.1.0"
description = ""
authors = ["Vladimir Carpa <vladimir.carpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
pydantic = {extras = ["email"], version = "^2.1.1"}
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
alembic = "^1.11.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
typer = "^0.9.0"
humps = "^0.2.2"
numpy


[tool.poetry.group.dev.dependencies]
fastapi-debug-toolbar = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
