[tool.poetry]
name = "compensations-backend"
version = "0.1.0"
description = ""
authors = ["Vladimir Carpa <oswalth2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
alembic = "^1.12.1"
typer = "^0.9.0"
humps = "^0.2.2"
numpy = "^1.26.1"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
